[tool.poetry]
name = "poetry add pandas"
version = "0.1.0"
description = ""
authors = ["Eli <elisabeth.salletmaier@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.0"
lxml = "^5.1.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
